--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-scripts": "5.0.0",
+    "sweetalert2-react": "^0.8.3",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
